--- a/src/KnowledgeGraph.ipynb
+++ b/src/KnowledgeGraph.ipynb
@@ -240,31 +240,90 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7d00a29-dbd1-4ca0-a6c8-66fbf25895a0",
+   "id": "9684fe74-f8ac-44e5-bd7f-5e2ac8a0724b",
    "metadata": {},
    "source": [
-    "#### Truncating for better performance and easier testing\n",
-    "Do not run the cell below if you want to use the full dataframe ( 250 movies )"
+    "#### Converting runtime to minutesm"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2da1dc80-b837-402d-b3e2-957efd1d1649",
+   "id": "6946fdb1-7bf9-4ac7-954a-ece83e7347c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[0:25]"
+    "def to_minutes(time_str):\n",
+    "    mins = 0\n",
+    "    parts = time_str.split()\n",
+    "    \n",
+    "    for part in parts:\n",
+    "        if part[-1] == 'h':\n",
+    "            mins += int(part[:-1]) * 60\n",
+    "        elif part[-1] == 'm':\n",
+    "            mins += int(part[:-1])\n",
+    "    \n",
+    "    return mins"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7dc5d770-1894-4654-8e28-247c9a807d14",
+   "id": "41508337-24ea-46a8-a0ee-f22f3924f0d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 10)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>title</th><th>year</th><th>rating</th><th>genre</th><th>certificate</th><th>run_time</th><th>tagline</th><th>casts</th><th>directors</th><th>writers</th></tr><tr><td>str</td><td>i64</td><td>f64</td><td>str</td><td>str</td><td>i64</td><td>str</td><td>str</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>&quot;The Shawshank Redemption&quot;</td><td>1994</td><td>9.3</td><td>&quot;Drama&quot;</td><td>&quot;R&quot;</td><td>142</td><td>&quot;Fear can hold you prisoner. Ho…</td><td>&quot;Tim Robbins,Morgan Freeman,Bob…</td><td>&quot;Frank Darabont&quot;</td><td>&quot;Stephen King,Frank Darabont&quot;</td></tr><tr><td>&quot;The Godfather&quot;</td><td>1972</td><td>9.2</td><td>&quot;Crime,Drama&quot;</td><td>&quot;R&quot;</td><td>175</td><td>&quot;An offer you can&#x27;t refuse.&quot;</td><td>&quot;Marlon Brando,Al Pacino,James …</td><td>&quot;Francis Ford Coppola&quot;</td><td>&quot;Mario Puzo,Francis Ford Coppol…</td></tr><tr><td>&quot;The Dark Knight&quot;</td><td>2008</td><td>9.0</td><td>&quot;Action,Crime,Drama&quot;</td><td>&quot;PG-13&quot;</td><td>152</td><td>&quot;Why So Serious?&quot;</td><td>&quot;Christian Bale,Heath Ledger,Aa…</td><td>&quot;Christopher Nolan&quot;</td><td>&quot;Jonathan Nolan,Christopher Nol…</td></tr><tr><td>&quot;The Godfather Part II&quot;</td><td>1974</td><td>9.0</td><td>&quot;Crime,Drama&quot;</td><td>&quot;R&quot;</td><td>202</td><td>&quot;All the power on earth can&#x27;t c…</td><td>&quot;Al Pacino,Robert De Niro,Rober…</td><td>&quot;Francis Ford Coppola&quot;</td><td>&quot;Francis Ford Coppola,Mario Puz…</td></tr><tr><td>&quot;12 Angry Men&quot;</td><td>1957</td><td>9.0</td><td>&quot;Crime,Drama&quot;</td><td>&quot;Approved&quot;</td><td>96</td><td>&quot;Life Is In Their Hands -- Deat…</td><td>&quot;Henry Fonda,Lee J. Cobb,Martin…</td><td>&quot;Sidney Lumet&quot;</td><td>&quot;Reginald Rose&quot;</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 10)\n",
+       "┌─────────────┬──────┬────────┬────────────┬───┬────────────┬────────────┬────────────┬────────────┐\n",
+       "│ title       ┆ year ┆ rating ┆ genre      ┆ … ┆ tagline    ┆ casts      ┆ directors  ┆ writers    │\n",
+       "│ ---         ┆ ---  ┆ ---    ┆ ---        ┆   ┆ ---        ┆ ---        ┆ ---        ┆ ---        │\n",
+       "│ str         ┆ i64  ┆ f64    ┆ str        ┆   ┆ str        ┆ str        ┆ str        ┆ str        │\n",
+       "╞═════════════╪══════╪════════╪════════════╪═══╪════════════╪════════════╪════════════╪════════════╡\n",
+       "│ The         ┆ 1994 ┆ 9.3    ┆ Drama      ┆ … ┆ Fear can   ┆ Tim Robbin ┆ Frank      ┆ Stephen    │\n",
+       "│ Shawshank   ┆      ┆        ┆            ┆   ┆ hold you   ┆ s,Morgan   ┆ Darabont   ┆ King,Frank │\n",
+       "│ Redemption  ┆      ┆        ┆            ┆   ┆ prisoner.  ┆ Freeman,Bo ┆            ┆ Darabont   │\n",
+       "│             ┆      ┆        ┆            ┆   ┆ Ho…        ┆ b…         ┆            ┆            │\n",
+       "│ The         ┆ 1972 ┆ 9.2    ┆ Crime,Dram ┆ … ┆ An offer   ┆ Marlon     ┆ Francis    ┆ Mario Puzo │\n",
+       "│ Godfather   ┆      ┆        ┆ a          ┆   ┆ you can't  ┆ Brando,Al  ┆ Ford       ┆ ,Francis   │\n",
+       "│             ┆      ┆        ┆            ┆   ┆ refuse.    ┆ Pacino,Jam ┆ Coppola    ┆ Ford       │\n",
+       "│             ┆      ┆        ┆            ┆   ┆            ┆ es …       ┆            ┆ Coppol…    │\n",
+       "│ The Dark    ┆ 2008 ┆ 9.0    ┆ Action,Cri ┆ … ┆ Why So     ┆ Christian  ┆ Christophe ┆ Jonathan   │\n",
+       "│ Knight      ┆      ┆        ┆ me,Drama   ┆   ┆ Serious?   ┆ Bale,Heath ┆ r Nolan    ┆ Nolan,Chri │\n",
+       "│             ┆      ┆        ┆            ┆   ┆            ┆ Ledger,Aa… ┆            ┆ stopher    │\n",
+       "│             ┆      ┆        ┆            ┆   ┆            ┆            ┆            ┆ Nol…       │\n",
+       "│ The         ┆ 1974 ┆ 9.0    ┆ Crime,Dram ┆ … ┆ All the    ┆ Al Pacino, ┆ Francis    ┆ Francis    │\n",
+       "│ Godfather   ┆      ┆        ┆ a          ┆   ┆ power on   ┆ Robert De  ┆ Ford       ┆ Ford Coppo │\n",
+       "│ Part II     ┆      ┆        ┆            ┆   ┆ earth      ┆ Niro,Rober ┆ Coppola    ┆ la,Mario   │\n",
+       "│             ┆      ┆        ┆            ┆   ┆ can't c…   ┆ …          ┆            ┆ Puz…       │\n",
+       "│ 12 Angry    ┆ 1957 ┆ 9.0    ┆ Crime,Dram ┆ … ┆ Life Is In ┆ Henry      ┆ Sidney     ┆ Reginald   │\n",
+       "│ Men         ┆      ┆        ┆ a          ┆   ┆ Their      ┆ Fonda,Lee  ┆ Lumet      ┆ Rose       │\n",
+       "│             ┆      ┆        ┆            ┆   ┆ Hands --   ┆ J. Cobb,Ma ┆            ┆            │\n",
+       "│             ┆      ┆        ┆            ┆   ┆ Deat…      ┆ rtin…      ┆            ┆            │\n",
+       "└─────────────┴──────┴────────┴────────────┴───┴────────────┴────────────┴────────────┴────────────┘"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.write_csv(\"../data/new_data.csv\")"
+    "mins = df[\"run_time\"].map_elements(to_minutes, return_dtype=pl.Int64)\n",
+    "df = df.with_columns(mins)\n",
+    "\n",
+    "df.head()"
    ]
   },
   {
@@ -282,28 +341,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "neo4j_uri = getenv(\"NEO4J_URL\")\n",
+    "neo4j_url = getenv(\"NEO4J_URL\")\n",
     "neo4j_user = getenv(\"NEO4J_USER\")\n",
-    "neo4j_password = getenv(\"NEO4J_PW\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b94c5fc9-5f2e-4ff1-9320-69f8b6e04e1f",
-   "metadata": {},
-   "source": [
-    "#### Recommend creating a new database\n",
-    "[For Community edition](https://stackoverflow.com/a/62564995)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "3fa014e5-d274-4170-9af4-7a25fed7b976",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db_name = \"neo4j\" # Default"
+    "neo4j_password = getenv(\"NEO4J_PW\")\n",
+    "neo4j_database = getenv(\"NEO4J_DB\")"
    ]
   },
   {
@@ -316,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "56a57a0c-a7d8-450a-a64b-1e74b81e06eb",
    "metadata": {},
    "outputs": [
@@ -324,17 +365,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Authentication verified\n"
+      "Authentication verified\n",
+      "Connection verified\n"
      ]
     }
    ],
    "source": [
-    "driver = GraphDatabase.driver(neo4j_uri, auth=(neo4j_user, neo4j_password))\n",
+    "driver = GraphDatabase.driver(neo4j_url, auth=(neo4j_user, neo4j_password))\n",
     "\n",
     "if driver.verify_authentication():\n",
     "    print(\"Authentication verified\")\n",
     "\n",
-    "driver.verify_connectivity()"
+    "driver.verify_connectivity()\n",
+    "print(\"Connection verified\")"
    ]
   },
   {
@@ -348,17 +391,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "981db6c5-844e-4f13-b494-cd9a0a2563d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_graph(df, driver, db_name, limit):\n",
-    "    with driver.session(database=db_name) as session:\n",
+    "def create_graph(df, driver, db, limit):\n",
+    "    with driver.session(database=db) as session:\n",
     "        for row in df.iter_rows(named=True):\n",
     "            session.run(\n",
     "                \"\"\"\n",
-    "                CREATE (m:Movie {title: $title, year: $year, rating: $rating, certificate: $certificate, run_time: $run_time, tagline: $tagline})\n",
+    "                MERGE (m:Movie {title: $title, year: $year, rating: $rating, certificate: $certificate, run_time: $run_time, tagline: $tagline})\n",
     "                \"\"\",\n",
     "                title=row['title'],\n",
     "                year=row['year'],\n",
@@ -426,17 +469,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "586a98e4-7e7a-47be-b253-d66dca765f22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_graph(df, driver, db_name, 3)"
+    "create_graph(df, driver, neo4j_database, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "06933056-b402-4b79-9d28-4e9dbbfa79c6",
    "metadata": {},
    "outputs": [],
