Added Streamlit app and README

--- a/src/Graph_RAG.ipynb
+++ b/src/Graph_RAG.ipynb
@@ -165,6 +165,9 @@
      "text": [
       "\n",
       "\n",
+      "Which are the best movies released before 1960?\n",
+      "\n",
+      "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
       "Generated Cypher:\n",
       "\u001b[32;1m\u001b[1;3mcypher\n",
@@ -179,6 +182,9 @@
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
       "12 Angry Men, It's a Wonderful Life, Seven Samurai, City Lights, Rear Window, Casablanca, Modern Times, Sunset Blvd., Paths of Glory, The Great Dictator\n",
+      "\n",
+      "\n",
+      "Which are the 3 best crime dramas?\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
@@ -198,6 +204,9 @@
       "3. The Godfather Part II (9.0)\n",
       "\n",
       "\n",
+      "Who is the director with highest average rating for their movies?\n",
+      "\n",
+      "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
       "Generated Cypher:\n",
       "\u001b[32;1m\u001b[1;3mcypher\n",
@@ -213,6 +222,9 @@
       "Frank Darabont is the director with highest average rating for their movies.\n",
       "\n",
       "\n",
+      "In what movies have Robert DeNiro and Al Pacino together?\n",
+      "\n",
+      "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
       "Generated Cypher:\n",
       "\u001b[32;1m\u001b[1;3mMATCH (p1:Person {name: \"Robert De Niro\"}), (p2:Person {name: \"Al Pacino\"}), (m:Movie)\n",
@@ -225,10 +237,13 @@
       "The Godfather Part II, Heat\n",
       "\n",
       "\n",
+      "Which director has Brad Pitt worked with the most?\n",
+      "\n",
+      "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
       "Generated Cypher:\n",
       "\u001b[32;1m\u001b[1;3mcypher\n",
-      "MATCH (brad:Person {name: \"Brad Pitt\"})-[:ACTED_IN]->(movie:Movie)<-[:DIRECTED]-(director:Person)\n",
+      "MATCH (brad:Person {name: \"Brad Pitt\"})-[:ACTED_IN]->(movie:Movie)<-[:DIRECTED]-(director:Director)\n",
       "RETURN director.name AS director_name, COUNT(*) AS num_collaborations\n",
       "ORDER BY num_collaborations DESC\n",
       "LIMIT 1;\n",
@@ -237,7 +252,30 @@
       "\u001b[32;1m\u001b[1;3m[{'director_name': 'David Fincher', 'num_collaborations': 2}]\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "David Fincher has worked with Brad Pitt the most, with 2 collaborations.\n"
+      "David Fincher has worked with Brad Pitt the most, with 2 collaborations.\n",
+      "\n",
+      "\n",
+      "Best 5 thrillers made before 2000.\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
+      "Generated Cypher:\n",
+      "\u001b[32;1m\u001b[1;3mcypher\n",
+      "MATCH (m:Movie)-[:BELONGS_TO]->(g:Genre)\n",
+      "WHERE g.name = 'Thriller' AND m.year < 2000\n",
+      "RETURN m.title, m.rating\n",
+      "ORDER BY m.rating DESC\n",
+      "LIMIT 5;\n",
+      "\u001b[0m\n",
+      "Full Context:\n",
+      "\u001b[32;1m\u001b[1;3m[{'m.title': 'The Silence of the Lambs', 'm.rating': 8.6}, {'m.title': 'Rear Window', 'm.rating': 8.5}, {'m.title': 'Psycho', 'm.rating': 8.5}, {'m.title': 'Come and See', 'm.rating': 8.4}, {'m.title': 'Reservoir Dogs', 'm.rating': 8.3}]\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "1. The Silence of the Lambs (8.6)\n",
+      "2. Rear Window (8.5)\n",
+      "3. Psycho (8.5)\n",
+      "4. Come and See (8.4)\n",
+      "5. Reservoir Dogs (8.3)\n"
      ]
     }
    ],
@@ -247,10 +285,12 @@
     "    \"Which are the 3 best crime dramas?\",\n",
     "    \"Who is the director with highest average rating for their movies?\",\n",
     "    \"In what movies have Robert DeNiro and Al Pacino together?\",\n",
-    "    \"Which director has Brad Pitt worked with the most?\"\n",
+    "    \"Which director has Brad Pitt worked with the most?\",\n",
+    "    \"Best 5 thrillers made before 2000.\"\n",
     "]\n",
     "\n",
     "for question in questions:\n",
+    "    print(\"\\n\\n\" + question)\n",
     "    print(chain.invoke(question)[\"result\"])"
    ]
   },
@@ -264,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "fcf2065a-5d0b-4cd6-ad26-906f170a40aa",
    "metadata": {},
    "outputs": [
@@ -272,6 +312,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "\n",
+      "Which actor and director have worked together the most?\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
@@ -289,6 +332,9 @@
       "Charles Chaplin and Charles Chaplin have worked together the most, with 5 collaborations.\n",
       "\n",
       "\n",
+      "Which writer and director have worked together the most?\n",
+      "\n",
+      "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
       "Generated Cypher:\n",
       "\u001b[32;1m\u001b[1;3mcypher\n",
@@ -302,6 +348,9 @@
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
       "Christopher Nolan has worked with himself the most.\n",
+      "\n",
+      "\n",
+      "Which actor and director have worked together the most? Remember they cannot be the same person.\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
@@ -318,6 +367,9 @@
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
       "Christian Bale and Christopher Nolan have worked together the most, with 4 collaborations.\n",
+      "\n",
+      "\n",
+      "Which writer and director have worked together the most? Remember they cannot be the same person.\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
@@ -347,6 +399,7 @@
     "]\n",
     "\n",
     "for question in questions:\n",
+    "    print(\"\\n\\n\" + question)\n",
     "    print(chain.invoke(question)[\"result\"])"
    ]
   },
@@ -361,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "a24e135f-22e0-421b-8534-cbfd3f20a142",
    "metadata": {},
    "outputs": [
@@ -369,6 +422,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "Who is the actor who has starred in most of the best rated movies.\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
@@ -386,21 +441,23 @@
       "\u001b[1m> Finished chain.\u001b[0m\n",
       "I don't know the answer to this question.\n",
       "\n",
+      "Who is the actor who has starred in most of the best rated movies.You know the answer. Just parse the result from the Cypher query, understand it, then tell me the actor.\n",
+      "\n",
       "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
       "Generated Cypher:\n",
       "\u001b[32;1m\u001b[1;3mcypher\n",
       "MATCH (a:Actor)-[:ACTED_IN]->(m:Movie)\n",
       "WHERE m.rating > 4.0\n",
-      "RETURN a.name, count(m) AS num_movies\n",
+      "RETURN a.name AS actor_name, COUNT(m) AS num_movies\n",
       "ORDER BY num_movies DESC\n",
       "LIMIT 1;\n",
       "\u001b[0m\n",
       "Full Context:\n",
-      "\u001b[32;1m\u001b[1;3m[{'a.name': 'Robert De Niro', 'num_movies': 9}]\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m[{'actor_name': 'Robert De Niro', 'num_movies': 9}]\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "Robert De Niro has starred in 9 movies.\n"
+      "Robert De Niro\n"
      ]
     }
    ],
@@ -409,10 +466,11 @@
     "    \"Who is the actor who has starred in most of the best rated movies.\",\n",
     "    \n",
     "    \"Who is the actor who has starred in most of the best rated movies.\" \\\n",
-    "    \"You know the answer. Just parse the result from the Cypher query, understand it, then tell me the actor\",\n",
+    "    \"You know the answer. Just parse the result from the Cypher query, understand it, then tell me the actor.\"\n",
     "]\n",
     "\n",
     "for question in questions:\n",
+    "    print(\"\\n\" + question)\n",
     "    print(chain.invoke(question)[\"result\"])"
    ]
   },
@@ -426,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "1b359b65-cc20-41a1-95d0-177a4e9f9db4",
    "metadata": {},
    "outputs": [
@@ -436,7 +494,7 @@
      "text": [
       "\n",
       "\n",
-      "Enter your question (Type 'EXIT' to exit) :  Top 5 thriller movies made before 2000.\n"
+      "Enter your question (Type 'EXIT' to exit) :  Top thrillers made before 2000?\n"
      ]
     },
     {
@@ -444,25 +502,32 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "Top thrillers made before 2000?\n",
+      "\n",
       "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
       "Generated Cypher:\n",
       "\u001b[32;1m\u001b[1;3mcypher\n",
-      "MATCH (m:Movie)-[:BELONGS_TO]->(:Genre {name: \"Thriller\"})\n",
-      "WHERE m.year < 2000\n",
-      "RETURN m.title, m.year\n",
+      "MATCH (m:Movie)-[:BELONGS_TO]->(g:Genre)\n",
+      "WHERE g.name = 'Thriller' AND m.year < 2000\n",
+      "RETURN m.title AS MovieTitle, m.year AS YearReleased, g.name AS Genre\n",
       "ORDER BY m.rating DESC\n",
-      "LIMIT 5;\n",
+      "LIMIT 10;\n",
       "\u001b[0m\n",
       "Full Context:\n",
-      "\u001b[32;1m\u001b[1;3m[{'m.title': 'The Silence of the Lambs', 'm.year': 1991}, {'m.title': 'Rear Window', 'm.year': 1954}, {'m.title': 'Psycho', 'm.year': 1960}, {'m.title': 'Come and See', 'm.year': 1985}, {'m.title': 'Reservoir Dogs', 'm.year': 1992}]\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m[{'MovieTitle': 'The Silence of the Lambs', 'YearReleased': 1991, 'Genre': 'Thriller'}, {'MovieTitle': 'Psycho', 'YearReleased': 1960, 'Genre': 'Thriller'}, {'MovieTitle': 'Rear Window', 'YearReleased': 1954, 'Genre': 'Thriller'}, {'MovieTitle': 'Come and See', 'YearReleased': 1985, 'Genre': 'Thriller'}, {'MovieTitle': 'Vertigo', 'YearReleased': 1958, 'Genre': 'Thriller'}, {'MovieTitle': 'Reservoir Dogs', 'YearReleased': 1992, 'Genre': 'Thriller'}, {'MovieTitle': 'M', 'YearReleased': 1931, 'Genre': 'Thriller'}, {'MovieTitle': 'Dial M for Murder', 'YearReleased': 1954, 'Genre': 'Thriller'}, {'MovieTitle': 'The Wages of Fear', 'YearReleased': 1953, 'Genre': 'Thriller'}, {'MovieTitle': 'The Sixth Sense', 'YearReleased': 1999, 'Genre': 'Thriller'}]\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
       "1. The Silence of the Lambs (1991)\n",
-      "2. Rear Window (1954)\n",
-      "3. Psycho (1960)\n",
+      "2. Psycho (1960)\n",
+      "3. Rear Window (1954)\n",
       "4. Come and See (1985)\n",
-      "5. Reservoir Dogs (1992)\n"
+      "5. Vertigo (1958)\n",
+      "6. Reservoir Dogs (1992)\n",
+      "7. M (1931)\n",
+      "8. Dial M for Murder (1954)\n",
+      "9. The Wages of Fear (1953)\n",
+      "10. The Sixth Sense (1999)\n"
      ]
     },
     {
@@ -471,28 +536,35 @@
      "text": [
       "\n",
       "\n",
-      "Enter your question (Type 'EXIT' to exit) :  Best Robert DeNiro movie?\n"
+      "Enter your question (Type 'EXIT' to exit) :  Top 5 thrillers less than 120 minutes long?\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "Top 5 thrillers less than 120 minutes long?\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
       "Generated Cypher:\n",
       "\u001b[32;1m\u001b[1;3mcypher\n",
-      "MATCH (m:Movie)<-[:ACTED_IN]-(a:Actor {name: \"Robert De Niro\"})\n",
-      "RETURN m.title AS BestMovie, m.rating AS Rating\n",
-      "ORDER BY m.rating DESC\n",
-      "LIMIT 1;\n",
+      "MATCH (m:Movie)-[:BELONGS_TO]->(g:Genre)\n",
+      "WHERE g.name = 'Thriller' AND m.run_time < 120\n",
+      "RETURN m.title, m.run_time\n",
+      "ORDER BY m.run_time\n",
+      "LIMIT 5;\n",
       "\u001b[0m\n",
       "Full Context:\n",
-      "\u001b[32;1m\u001b[1;3m[{'BestMovie': 'The Godfather Part II', 'Rating': 9.0}]\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m[{'m.title': 'Persona', 'm.run_time': 83}, {'m.title': 'The Third Man', 'm.run_time': 93}, {'m.title': 'Fargo', 'm.run_time': 98}, {'m.title': 'M', 'm.run_time': 99}, {'m.title': 'Reservoir Dogs', 'm.run_time': 99}]\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "I don't know the answer to that question.\n"
+      "1. Persona (83 minutes)\n",
+      "2. The Third Man (93 minutes)\n",
+      "3. Fargo (98 minutes)\n",
+      "4. M (99 minutes)\n",
+      "5. Reservoir Dogs (99 minutes)\n"
      ]
     },
     {
@@ -501,7 +573,7 @@
      "text": [
       "\n",
       "\n",
-      "Enter your question (Type 'EXIT' to exit) :  Best Robert DeNiro movie? You know the answer. Parse the result and answer.\n"
+      "Enter your question (Type 'EXIT' to exit) :  Best Akira Kurosawa movie?\n"
      ]
     },
     {
@@ -509,51 +581,49 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\n",
-      "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
-      "Generated Cypher:\n",
-      "\u001b[32;1m\u001b[1;3mMATCH (m:Movie)<-[:ACTED_IN]-(a:Actor {name: \"Robert De Niro\"})\n",
-      "RETURN m.title AS best_movie_by_Robert_De_Niro\n",
-      "ORDER BY m.rating DESC\n",
-      "LIMIT 1\u001b[0m\n",
-      "Full Context:\n",
-      "\u001b[32;1m\u001b[1;3m[{'best_movie_by_Robert_De_Niro': 'The Godfather Part II'}]\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n",
-      "The Godfather Part II\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "Enter your question (Type 'EXIT' to exit) :  Which actor has Robert DeNiro worked alongside the most?\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Best Akira Kurosawa movie?\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
       "Generated Cypher:\n",
       "\u001b[32;1m\u001b[1;3mcypher\n",
-      "MATCH (a:Actor {name: \"Robert De Niro\"})-[:ACTED_IN]-(m:Movie)\n",
-      "WITH m, a\n",
-      "MATCH (m)-[:ACTED_IN]-(co:Actor)\n",
-      "WHERE co <> a\n",
-      "RETURN co.name AS Co_Actor, COUNT(*) AS Number_of_Collaborations\n",
-      "ORDER BY Number_of_Collaborations DESC\n",
+      "MATCH (m:Movie)<-[:DIRECTED]-(d:Director {name: \"Akira Kurosawa\"})\n",
+      "RETURN m.title AS BestMovie\n",
+      "ORDER BY m.rating DESC\n",
       "LIMIT 1;\n",
       "\u001b[0m\n",
       "Full Context:\n",
-      "\u001b[32;1m\u001b[1;3m[{'Co_Actor': 'Joe Pesci', 'Number_of_Collaborations': 3}]\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m[{'BestMovie': 'Seven Samurai'}]\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "Joe Pesci has worked alongside Robert DeNiro the most, with 3 collaborations.\n"
+      "Seven Samurai\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Enter your question (Type 'EXIT' to exit) :  Who acted in Seven Samurai?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Who acted in Seven Samurai?\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
+      "Generated Cypher:\n",
+      "\u001b[32;1m\u001b[1;3mMATCH (m:Movie {title: \"Seven Samurai\"})-[:ACTED_IN]-(a:Actor) RETURN a.name\u001b[0m\n",
+      "Full Context:\n",
+      "\u001b[32;1m\u001b[1;3m[{'a.name': 'Keiko Tsushima'}, {'a.name': 'Takashi Shimura'}, {'a.name': 'Toshirô Mifune'}]\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Keiko Tsushima, Takashi Shimura, Toshirô Mifune acted in Seven Samurai.\n"
      ]
     },
     {
@@ -581,6 +651,7 @@
     "        print(\"Exiting\")\n",
     "        break\n",
     "    else:\n",
+    "        print(\"\\n\" + question)\n",
     "        print(chain.invoke(question)[\"result\"])"
    ]
   }
