--- a/src/Knowledge_Graph.ipynb
+++ b/src/Knowledge_Graph.ipynb
@@ -243,7 +243,7 @@
    "id": "9684fe74-f8ac-44e5-bd7f-5e2ac8a0724b",
    "metadata": {},
    "source": [
-    "#### Converting runtime to minutesm"
+    "#### Converting runtime to minutes"
    ]
   },
   {
@@ -386,7 +386,10 @@
    "metadata": {},
    "source": [
     "#### 3 types of nodes - Movie, Genre, Person\n",
-    "#### Person can be - Actor, Director, Writer or a combination of these"
+    "#### Person can be - Actor, Director, Writer or a combination of these\n",
+    "#### Relationships are -\n",
+    "- Person - [ WROTE / ACTED_IN / DIRECTED ] -> Movie\n",
+    "- Movie - [ BELONGS_TO ] -> Genre"
    ]
   },
   {
@@ -468,6 +471,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7d3fcc6-5089-4068-b78e-bb32a59d6f5d",
+   "metadata": {},
+   "source": [
+    "Setting the limit parameter to 3, as default, ensures only first 3 actors, directors, writers and genres are considered for a movie.\n",
+    "You can increase / decrease the limit."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "586a98e4-7e7a-47be-b253-d66dca765f22",
@@ -485,6 +497,22 @@
    "outputs": [],
    "source": [
     "driver.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fbaf3cd-74af-4831-91cd-6d0bbd290428",
+   "metadata": {},
+   "source": [
+    "- To view the network graph, in the Neo4j browser, run\n",
+    "``` cypher\n",
+    "MATCH (n) RETURN n\n",
+    "```\n",
+    "\n",
+    "- To delete the network graph, in the Neo4j browser, run\n",
+    "``` cypher\n",
+    "MATCH (n) DETACH DELETE n\n",
+    "```"
    ]
   }
  ],
