Requirements, README and fixes

--- a/src/Knowledge_Graph.ipynb
+++ b/src/Knowledge_Graph.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pl.read_csv(\"../data/imdb.csv\")"
+    "df = pl.read_csv(\"../data/data.csv\")"
    ]
   },
   {
